# haskell-typeclass-lessons

./: .gitignore
ap-data/: LICENSE  README.md  ap-data.cabal  stack.yaml
ap-data/src/Data/: APList.hs
ap-data/test/Data/: APListSpec.hs
