name:                ap-data
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexandradeas/ap-data#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandra Deas
maintainer:          alexandra@regressive.tech
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.APList
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ap-data
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ap-data
  default-language:    Haskell2010

test-suite ap-data-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ap-data
                     , hspec
                     , hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexandradeas/ap-data
